# eic-story-i

./: .gitignore  Cargo.toml  README.md  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs
problem01/: Cargo.toml
problem01/src/: lib.rs  main.rs  part1_input.txt  part2_input.txt  part3_input.txt
problem02/: Cargo.toml
problem02/src/: lib.rs  main.rs  part1_input.txt  part2_input.txt  part3_input.txt
problem03/: Cargo.toml
problem03/src/: lib.rs  main.rs  part1_input.txt  part2_input.txt  part3_input.txt
