[package]
name = "benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
problem01 = { version = "1.0.0", path = "../problem01" }
problem02 = { version = "0.1.0", path = "../problem02" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[lib]
bench = false
